# palimpsest

./: .env.example  .gitignore  AGENTS.md  Dockerfile  README.md  docker-compose.prod.yml  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml  deploy-api.yml  docker-image.yml  pages.yml
data/: AGENTS.md
deploy/: AGENTS.md  Caddyfile  bootstrap.sh  palimpsest-api.service
docs/: AGENTS.md  AMINER_AI2000_INVESTIGATION.md  AMINER_QUICK_START.md  NEO4J.md  OAG_V3.1_DOWNLOAD_GUIDE.md  graph_data_model.md  oag_v3.1_urls.json  paper_outline.md  semantic_scholar_api_application.md  track1_paper_draft.md  track3_paper_draft.md
docs/submissions/: README.md  statistical_verification_report.txt
docs/submissions/track1_nhb/: checklist.md  cover_letter.md  manuscript.md
docs/submissions/track2_note/: manuscript.md
docs/submissions/track3_followup_F1/: citation_cartels_outline.md
docs/submissions/track3_followup_F2/: publisher_warning_outline.md
docs/submissions/track3_pnas/: checklist.md  cover_letter.md  manuscript.md  si_appendix.md  (+1 more)
frontend/: AGENTS.md  index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: AGENTS.md  App.tsx  cytoscape-cose-bilkent.d.ts  cytoscape-node-html-label.d.ts  main.tsx
notebooks/: 01_ai_adoption_exploration.ipynb  02_retraction_propagation.ipynb  AGENTS.md  track3_analysis.ipynb
scripts/: AGENTS.md  analyze_ai2000.py  analyze_ai_adoption.py  analyze_neo4j_fields.py  analyze_retraction_citations.py  analyze_retraction_propagation.py  build_frontend.sh  build_id_mapping.py  build_pnas_submission.py  check_downloads.sh  check_status.sh  collect_ai2000.py  collect_ai_adoption.py  collect_retraction_data.py  compile_manuscripts.py  deep_analyze_ai_adoption.py  deep_analyze_retraction.py  download_all_datasets.sh  download_oag_v3.1.py  ensure_neo4j_indexes.py  etl_openalex_snapshot.py  extract_neo4j_field_data.py  generate_figures.py  generate_neo4j_figures.py  generate_pnas_figures.py  generate_pnas_figures_papermill.py  generate_publication_figures.py  generate_publication_figures_v2.py  generate_supplementary_figures.py  harvest_arxiv.py  import_sample_to_neo4j.py  import_to_neo4j.py  join_retraction_watch_openalex.py  matched_control_analysis.py  merge_etl_output.py  precompute_concept_ai_counts.py  precompute_yearly_counts.py  prepare_neo4j_import.py  right_censoring_analysis.py  rsync_remaining_to_nas.sh  (+35 more)
src/: AGENTS.md
src/palimpsest/: AGENTS.md  __init__.py
tests/: AGENTS.md  conftest.py
tests/test_analysis/: AGENTS.md  test_ai_penetration.py  test_retraction_propagation.py
tests/test_bibliometrics/: AGENTS.md  test_indicators.py
tests/test_data/: AGENTS.md  test_openalex.py
tests/test_networks/: AGENTS.md  test_citation.py
(+70 files in other folders)
